--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,17 +13,21 @@ httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.10.18
+packaging==25.0
+pluggy==1.6.0
 pydantic==2.11.7
 pydantic-extra-types==2.10.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
+pytest==8.4.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
